// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Info tests should match snapshot with default Price 1`] = `
<DocumentFragment>
  <div
    class="styles__ContainerPrice-sc-l5bh20-0 dJJZvy"
  >
    <p
      class="styles__Text-sc-tpjft1-0 eFfUut"
      color="text"
    />
    <p
      class="styles__Text-sc-tpjft1-0 jGCNOp"
      color="text"
    >
       / 50 minutos
    </p>
  </div>
</DocumentFragment>
`;

exports[`Info tests should match snapshot with default Price with mount 1`] = `
<DocumentFragment>
  <div
    class="styles__ContainerPrice-sc-l5bh20-0 dJJZvy"
  >
    <p
      class="styles__Text-sc-tpjft1-0 eFfUut"
      color="text"
    >
      BRL 200
    </p>
    <p
      class="styles__Text-sc-tpjft1-0 jGCNOp"
      color="text"
    >
       / 50 minutos
    </p>
  </div>
</DocumentFragment>
`;
